言語一覧を取ってきてPreferencesに保存できるようにした。

--- a/Sample/Base.lproj/Main.storyboard
+++ b/Sample/Base.lproj/Main.storyboard
@@ -4,6 +4,24 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
     </dependencies>
     <scenes>
+        <!--View Controller Http5-->
+        <scene sceneID="BNg-ua-UEN">
+            <objects>
+                <viewController id="2XV-Hp-bWW" customClass="ViewControllerHttp5" customModule="Sample" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="vJW-PH-OWc"/>
+                        <viewControllerLayoutGuide type="bottom" id="eOP-ng-t0G"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="tYG-lQ-sEo">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="npL-JJ-v8G" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="952" y="-584"/>
+        </scene>
         <!--View Controller-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
@@ -22,7 +40,7 @@
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <segue destination="jFj-WH-50f" kind="show" id="1i4-Ct-0k9"/>
+                                    <segue destination="2XV-Hp-bWW" kind="show" id="mb1-gk-nb8"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -38,23 +56,23 @@
             </objects>
             <point key="canvasLocation" x="952" y="136"/>
         </scene>
-        <!--View Controller Http5-->
-        <scene sceneID="kRK-il-p9W">
+        <!--View Controller Http6-->
+        <scene sceneID="9wi-6m-Y2A">
             <objects>
-                <viewController id="jFj-WH-50f" customClass="ViewControllerHttp5" customModule="Sample" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="j9b-PJ-xyv" customClass="ViewControllerHttp6" customModule="Sample" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="9Wp-xJ-wq7"/>
-                        <viewControllerLayoutGuide type="bottom" id="jjj-AO-JjB"/>
+                        <viewControllerLayoutGuide type="top" id="qbr-1z-hlV"/>
+                        <viewControllerLayoutGuide type="bottom" id="Kro-Py-2Mf"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="JiC-Ei-7VM">
+                    <view key="view" contentMode="scaleToFill" id="XHs-g6-p55">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="VZ2-Mn-djo" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="H3m-UT-Z8J" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="927" y="938"/>
+            <point key="canvasLocation" x="802" y="911"/>
         </scene>
         <!--View Controller Http3-->
         <scene sceneID="MVk-US-wtJ">
@@ -77,7 +95,7 @@
                                     <action selector="tappedStartSession:" destination="FPb-i9-Wop" eventType="touchUpInside" id="jLz-A4-vo7"/>
                                 </connections>
                             </button>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="e1O-7w-bQU">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="e1O-7w-bQU">
                                 <rect key="frame" x="132" y="75" width="337" height="202"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="337" id="UMa-dD-rkk"/>
@@ -107,6 +125,32 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="E0Q-1g-rFH" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1680" y="843"/>
+        </scene>
+        <!--Table View Controller-->
+        <scene sceneID="WiL-Sv-p9f">
+            <objects>
+                <tableViewController id="ile-QX-kaG" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="Eh9-hV-TPc">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="vnJ-LJ-ZVH">
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="vnJ-LJ-ZVH" id="j8D-Mt-sC2">
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="ile-QX-kaG" id="qJd-kU-R31"/>
+                            <outlet property="delegate" destination="ile-QX-kaG" id="zbS-yi-AdS"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="fvZ-fQ-ocQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2358" y="843"/>
         </scene>
         <!--View ControllerA-->
         <scene sceneID="ziE-Ih-Mwj">
